--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,15 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-	<ListView
+	<ListView android:id="@+id/bluetoothList"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent" >
-
 	</ListView>
-
-    <TextView
-        android:id="@+id/secondLine"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
 </RelativeLayout>
