--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,8 +8,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-	<ListView android:id="@+id/bluetoothList"
+	<TextView
+	    android:id="@+id/signal"
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" >
-	</ListView>
+	    android:layout_height="match_parent"
+	    android:textSize="60sp" />
+
 </RelativeLayout>
